--- a/index.html
+++ b/index.html
@@ -605,20 +605,20 @@
           <div class="form-wrapper">
             <div class="col-md-3">
               <div class="form-group">
-                <input class="form-field js-field-name" type="text" placeholder="Name" required />
+                <input class="form-field js-field-name" type="text" name="name" placeholder="Name" required />
                 <span class="form-validation"></span>
                 <span class="form-invalid-icon"><i class="mdi mdi-close" aria-hidden="true"></i></span>
               </div>
 
               <div class="form-group">
-                <input class="form-field js-field-email" type="email" placeholder="E-mail" required />
+                <input class="form-field js-field-email" type="email" name="email" placeholder="E-mail" required />
                 <span class="form-validation"></span>
                 <span class="form-invalid-icon"><i class="mdi mdi-close" aria-hidden="true"></i></span>
               </div>
             </div>
             <div class="col-md-5">
               <div class="form-group">
-                <textarea class="form-field js-field-message" placeholder="Message" required></textarea>
+                <textarea class="form-field js-field-message" placeholder="Message" name="message" required></textarea>
                 <span class="form-validation"></span>
               </div>
               <div class="submit-holder">
