--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
             </p>
           </div>
           <div class="modal-form">
-            <form action="#" class="js-modal-form">
+            <form action="#thanks-model" class="js-modal-form">
               <div class="row form-wrapper">
                 <div class="col-lg-5 col-md-5">
                   <div class="form-group">
@@ -962,7 +962,7 @@
           <div class="modal-description">
             <p>
               Thank you for your interest in my work. I’ll contact you just in
-              a few days. Stay tuned and see you soon, friend!
+              a few hours. Stay tuned and see you soon, friend!
             </p>
           </div>
           <a href="#" class="site-btn" data-dismiss="modal">Back to cv</a>
