--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
       <div class="row">
         <div class="col-md-12 wow zoomIn">
           <div class="copyright">
-            <p>Copyright 2017 Danny.</p>
+            <p>Copyright 2020 Aditya.</p>
           </div>
         </div>
       </div>
@@ -916,23 +916,23 @@
             </p>
           </div>
           <div class="modal-form">
-            <form action="#thanks-model" class="js-modal-form">
+            <form action="#thanks-model" data-netlify="true" class="js-modal-form">
               <div class="row form-wrapper">
                 <div class="col-lg-5 col-md-5">
                   <div class="form-group">
-                    <input class="form-field js-field-name" type="text" placeholder="Name" required />
+                    <input class="form-field js-field-name" name="name" type="text" placeholder="Name" required />
                     <span class="form-validation"></span>
                     <span class="form-invalid-icon"><i class="mdi mdi-close" aria-hidden="true"></i></span>
                   </div>
                   <div class="form-group">
-                    <input class="form-field js-field-email" type="email" placeholder="E-mail" required />
+                    <input class="form-field js-field-email" name="email" type="email" placeholder="E-mail" required />
                     <span class="form-validation"></span>
                     <span class="form-invalid-icon"><i class="mdi mdi-close" aria-hidden="true"></i></span>
                   </div>
                 </div>
                 <div class="col-lg-7 col-md-7">
                   <div class="form-group">
-                    <textarea class="form-field js-field-message" placeholder="Message" required></textarea>
+                    <textarea class="form-field js-field-message" name="message" placeholder="Message" required></textarea>
                     <span class="form-validation"></span>
                   </div>
                 </div>
