--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
             </div>
           </div>
         </div>
-        <form action="#" class="wow slideInRight js-footer-form" data-netlify="true">
+        <form action="#thanks-modal" class="wow slideInRight js-footer-form" data-netlify="true">
           <div class="form-wrapper">
             <div class="col-md-3">
               <div class="form-group">
