--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
             </p>
           </div>
           <div class="modal-form">
-            <form action="#thanks-modal" data-netlify="true" class="js-modal-form">
+            <form action="/index.html#thanks-modal" data-netlify="true" class="js-modal-form">
               <div class="row form-wrapper">
                 <div class="col-lg-5 col-md-5">
                   <div class="form-group">
