--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
             </div>
           </div>
         </div>
-        <form action="#thanks-modal" data-target="#thanks-modal" class="wow slideInRight js-footer-form" data-netlify="true">
+        <form action="#"  class="wow slideInRight js-footer-form" data-netlify="true">
           <div class="form-wrapper">
             <div class="col-md-3">
               <div class="form-group">
@@ -916,7 +916,7 @@
             </p>
           </div>
           <div class="modal-form">
-            <form action="#thanks-modal" data-netlify="true" class="js-modal-form">
+            <form action="#" data-netlify="true" class="js-modal-form">
               <div class="row form-wrapper">
                 <div class="col-lg-5 col-md-5">
                   <div class="form-group">
