--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Aditya Panwar । Freelance Software Developer</title>
+      <meta name="keywords" content="web developer in Saharanpur,web development Saharanpur">
+      <meta name="description" content="Web & Mobile app Developer located in Saharanpur (India). 
+      I have more than 5 years of experience in Mobile App development, Website development. 
+      If you have any question(s), please don’t hesitate to contact me.">
+      <meta name="author" content="Aditya Panwar">
+  
   <link rel="stylesheet" type="text/css" href="css/master.css" />
   <link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet" />
   <link href="https://cdn.materialdesignicons.com/2.0.46/css/materialdesignicons.min.css" rel="stylesheet" />
@@ -155,6 +161,8 @@
             </div>
             <div class="about-btns">
               <a data-toggle="modal" data-target="#contact-modal" href="#" class="site-btn">Contact me</a>
+            
+              <a target="_blank"  href="https://wa.me/918979747435" class="site-btn">Whatsapp</a>
             </div>
           </div>
         </div>
@@ -338,151 +346,34 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-12">
-          <div class="portfolio-sort wow slideInLeft">
-            <ul class="list-inline">
-              <li class="colored-link" data-mixitup-control data-filter="all">
-                All projects
-              </li>
-              <li class="colored-link" data-mixitup-control data-filter=".web-sites">
-                Web sites
-              </li>
-              <li class="colored-link" data-mixitup-control data-filter=".ui-ux-design">
-                UI\UX design
-              </li>
-              <li class="colored-link" data-mixitup-control data-filter=".frontend">
-                Frontend
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
+      
       <div class="row">
         <div class="col-md-12">
           <div class="portfolio">
             <div class="row">
-              <div class="col-md-3 col-sm-6 col-xs-6 mix web-sites wow flipInX">
-                <a data-toggle="modal" data-target="#portfolio-modal" data-name="patty" title="Shop web app “Patty”"
-                  href="#" class="portfolio-box">
+              <div class="col-md-3 col-sm-6 col-xs-6 mix frontend wow flipInX">
+                <a  class="portfolio-box">
                   <div class="portfolio-img">
                     <img src="media/portfolio-images/portfolio-1.jpg" alt="" />
                   </div>
                   <div class="portfolio-name">
-                    <span>Shop web app “Patty”</span>
+                    <span>Garv - Android App</span>
                   </div>
                   <div class="portfolio-date">
-                    <span>April, 2017</span>
+                    <span>March, 2018</span>
                   </div>
                 </a>
               </div>
               <div class="col-md-3 col-sm-6 col-xs-6 mix frontend wow flipInX">
-                <a data-toggle="modal" data-target="#portfolio-modal" data-name="phoenix"
-                  title="Startup website “Phoenix”" href="#" class="portfolio-box">
+                <a  class="portfolio-box">
                   <div class="portfolio-img">
                     <img src="media/portfolio-images/portfolio-2.jpg" alt="" />
                   </div>
                   <div class="portfolio-name">
-                    <span>Startup website “Phoenix”</span>
+                    <span>EcoBioPiantec - Website</span>
                   </div>
                   <div class="portfolio-date">
-                    <span>March, 2016</span>
-                  </div>
-                </a>
-              </div>
-              <div class="col-md-3 col-sm-6 col-xs-6 mix web-sites wow flipInX">
-                <a data-toggle="modal" data-target="#portfolio-modal" data-name="ewesta" title="Corporate chat “eWesta”"
-                  href="#" class="portfolio-box">
-                  <div class="portfolio-img">
-                    <img src="media/portfolio-images/portfolio-3.jpg" alt="" />
-                  </div>
-                  <div class="portfolio-name">
-                    <span>Corporate chat “eWesta”</span>
-                  </div>
-                  <div class="portfolio-date">
-                    <span>December, 2015</span>
-                  </div>
-                </a>
-              </div>
-              <div class="col-md-3 col-sm-6 col-xs-6 mix frontend wow flipInX">
-                <a data-toggle="modal" data-target="#portfolio-modal" data-name="foody"
-                  title="Restaraunt web app “Foody”" href="#" class="portfolio-box">
-                  <div class="portfolio-img">
-                    <img src="media/portfolio-images/portfolio-4.jpg" alt="" />
-                  </div>
-                  <div class="portfolio-name">
-                    <span>Restaraunt web app “Foody”</span>
-                  </div>
-                  <div class="portfolio-date">
-                    <span>May, 2014</span>
-                  </div>
-                </a>
-              </div>
-              <div class="
-                    col-md-3 col-sm-6 col-xs-6
-                    mix
-                    ui-ux-design
-                    wow
-                    flipInX
-                  ">
-                <a data-toggle="modal" data-target="#portfolio-modal" data-name="stark" title="Game website “Stark”"
-                  href="#" class="portfolio-box">
-                  <div class="portfolio-img">
-                    <img src="media/portfolio-images/portfolio-5.jpg" alt="" />
-                  </div>
-                  <div class="portfolio-name">
-                    <span>Game website “Stark”</span>
-                  </div>
-                  <div class="portfolio-date">
-                    <span>June, 2014</span>
-                  </div>
-                </a>
-              </div>
-              <div class="col-md-3 col-sm-6 col-xs-6 mix web-sites wow flipInX">
-                <a data-toggle="modal" data-target="#portfolio-modal" data-name="te4h" title="Blogger website “Te4h”"
-                  href="#" class="portfolio-box">
-                  <div class="portfolio-img">
-                    <img src="media/portfolio-images/portfolio-6.jpg" alt="" />
-                  </div>
-                  <div class="portfolio-name">
-                    <span>Blogger website “Te4h”</span>
-                  </div>
-                  <div class="portfolio-date">
-                    <span>April, 2014</span>
-                  </div>
-                </a>
-              </div>
-              <div class="col-md-3 col-sm-6 col-xs-6 mix frontend wow flipInX">
-                <a data-toggle="modal" data-target="#portfolio-modal" data-name="lamp" title="Product website “Lamp”"
-                  href="#" class="portfolio-box">
-                  <div class="portfolio-img">
-                    <img src="media/portfolio-images/portfolio-7.jpg" alt="" />
-                  </div>
-                  <div class="portfolio-name">
-                    <span>Product website “Lamp”</span>
-                  </div>
-                  <div class="portfolio-date">
-                    <span>December, 2013</span>
-                  </div>
-                </a>
-              </div>
-              <div class="
-                    col-md-3 col-sm-6 col-xs-6
-                    mix
-                    ui-ux-design
-                    wow
-                    flipInX
-                  ">
-                <a data-toggle="modal" data-target="#portfolio-modal" data-name="zebra" title="Blog web app “Zebra”"
-                  href="#" class="portfolio-box">
-                  <div class="portfolio-img">
-                    <img src="media/portfolio-images/portfolio-8.jpg" alt="" />
-                  </div>
-                  <div class="portfolio-name">
-                    <span>Blog web app “Zebra”</span>
-                  </div>
-                  <div class="portfolio-date">
-                    <span>March, 2013</span>
+                    <span>November, 2019</span>
                   </div>
                 </a>
               </div>
