--- a/index.html
+++ b/index.html
@@ -352,6 +352,58 @@
           <div class="portfolio">
             <div class="row">
               <div class="col-md-3 col-sm-6 col-xs-6 mix frontend wow flipInX">
+                <a target="_blank" href="https://www.youtube.com/watch?v=G1b0pxpE3Hs" class="portfolio-box">
+                  <div class="portfolio-img">
+                    <img src="media/portfolio-images/portfolio-3.jpg" alt="" />
+                  </div>
+                  <div class="portfolio-name">
+                    <span>AudioDo - Flutter App</span>
+                  </div>
+                  <div class="portfolio-date">
+                    <span>May, 2019</span>
+                  </div>
+                </a>
+              </div>
+              <div class="col-md-3 col-sm-6 col-xs-6 mix frontend wow flipInX">
+                <a target="_blank" href="https://www.youtube.com/watch?v=s_8miEfdNGs" class="portfolio-box">
+                  <div class="portfolio-img">
+                    <img src="media/portfolio-images/portfolio-6.jpg" alt="" />
+                  </div>
+                  <div class="portfolio-name">
+                    <span>Simba Tale - Android Game</span>
+                  </div>
+                  <div class="portfolio-date">
+                    <span>July, 2019</span>
+                  </div>
+                </a>
+              </div>
+              <div class="col-md-3 col-sm-6 col-xs-6 mix frontend wow flipInX">
+                <a target="_blank" href="https://youtu.be/n6tAzdDCdQ8" class="portfolio-box">
+                  <div class="portfolio-img">
+                    <img src="media/portfolio-images/portfolio-4.jpg" alt="" />
+                  </div>
+                  <div class="portfolio-name">
+                    <span>Jet Ride - Android Game</span>
+                  </div>
+                  <div class="portfolio-date">
+                    <span>March, 2019</span>
+                  </div>
+                </a>
+              </div>
+              <div class="col-md-3 col-sm-6 col-xs-6 mix frontend wow flipInX">
+                <a target="_blank" href="https://www.youtube.com/watch?v=Od2f3Afw0HI" class="portfolio-box">
+                  <div class="portfolio-img">
+                    <img src="media/portfolio-images/portfolio-5.jpg" alt="" />
+                  </div>
+                  <div class="portfolio-name">
+                    <span>Jump Color - Android Game</span>
+                  </div>
+                  <div class="portfolio-date">
+                    <span>November, 2018</span>
+                  </div>
+                </a>
+              </div>
+              <div class="col-md-3 col-sm-6 col-xs-6 mix frontend wow flipInX">
                 <a  class="portfolio-box">
                   <div class="portfolio-img">
                     <img src="media/portfolio-images/portfolio-1.jpg" alt="" />
@@ -365,7 +417,7 @@
                 </a>
               </div>
               <div class="col-md-3 col-sm-6 col-xs-6 mix frontend wow flipInX">
-                <a  class="portfolio-box">
+                <a target="_blank" href="http://ecobioplantec.com/" class="portfolio-box">
                   <div class="portfolio-img">
                     <img src="media/portfolio-images/portfolio-2.jpg" alt="" />
                   </div>
